SIDM-6131: Updates to the content of the Verification code screen. (#686)
* SIDM-6131: Updates to the content of the Verification code screen.
* SIDM-4702: Fixed apostrophe in Welsh message.
* SIDM-6136: Upgrade base java helm chart to latest.
* SIDM-6048: Add fortify to pipeline